v130
    -Fix large memory leaks in parser, now mem usage ~400MB RAM, before in GB
    -Add tar parser recursive mode (disabled)
    -Fix gzip parser, small files not detected
    -bzip2 parser failed to detect small blocks
    -zlib parser priority change and fix for bad detection
    -Changes to textparser (needs rewrite)
v129
    -Fix bzip2, tiff parser
    -Add 0 priority parser changes to:
     base64(1/2), bmp, pnm, szdd.
     Priority changes from n to 0 when valid header is found and lenght of data is >64000
    -Change zlib priority
    -Re-enable all parser if 0 parser reports fail.
v128
    -Change priority to 0 in parsers:
     bzip2 - after 4 blocks
     cd - after 32 sectors
     mdf - after 32 sectors
     tar - after 4 files
v127
    -Expand priority range to 0-6, 6=default
    -Fix tar, bzip2, text parser
    -Add support for files larger then 2GB
    -In text parser switch to 0 priority when at least 32MB is processed (parsing from ~6mb/s to ~40mb/s)
v126
    -Fix cd, szdd parser
    -Display correct image info in pngparser
v125
    -Fix mdf detection
    -Fix codec reference rebound issue
    -Re-enable EOLTEXT
v124
    -Fix detection
v123
    -Fix gzip parsing.
    -Fix bzip2 memory leak.
v122
    -Re-enable zlibFilter.
    -Add PREFLATE type.
    -Test ZLIB transform fail and use PREFLATE if needed.
    -Fix for bzip2, tar parser.
v121
    -Fix GZIP parser false positive detection that suppressed bzip2/tar detection.
     The fallback was incorrectly returning END even when preflate validation failed.
v120
    -Reintroduce PNG (.png) file format detection and preprocessing support.
    -Understands multi-IDAT chunks.
    -Non-standard and optimized images are recognized as well.
v119
    -Add GZIP (.gz) file format detection and preprocessing support.
    -Implement GZIP header detection with proper header length calculation.
    -Integrate with deflate preprocessing filter for compression/decompression.
v118